--- a/HR4CEnouvo/index.html
+++ b/HR4CEnouvo/index.html
@@ -79,52 +79,57 @@
           <form class="box-child-after-form" action="#" method="">
             <div class="container">
               <div class="row">
+                <div class="col-xl-8 headding-flex ">
+                  <div class="col-xl-6 ">
+                    <div class="box-child-after-form">
+                      <label class="box-child-after-label">SEARCH</label>
+                      <div class="box-child-after-contain">
+                        <input
+                          type="text"
+                          class="form-control box-child-after-input"
+                          placeholder="All keywords..."
+                        />
+                        <i class="fas fa-search box-child-after-icon"></i>
+                      </div>
+                    </div>
+                  </div>
 
-                <div class="col-xl-4 col-md-6 col-sm-12  padding">
-                  <div class="box-child-after-form">
-                    <label class="box-child-after-label">SEARCH</label>
-                    <div class="box-child-after-contain">
-                      <input
-                        type="text"
-                        class="form-control box-child-after-input"
-                        placeholder="All keywords..."
-                      />
-                      <i class="fas fa-search box-child-after-icon"></i>
+                  <div class="col-xl-6 ">
+                    <div class="box-child-after-form">
+                      <label class="box-child-after-label">WHERE?</label>
+                      <div class="box-child-after-contain">
+                        <select class="form-select" style="padding-left: 28px">
+                          <option>All location</option>
+                          <option>Hà Nội</option>
+                          <option>Đà Nẵng</option>
+                          <option>Sài gòn</option>
+                        </select>
+                        <i class="fas fa-map-marker-alt box-child-after-icon"></i>
+                      </div>
                     </div>
                   </div>
                 </div>
 
-                <div class="col-xl-4 col-md-6 col-sm-12  padding">
-                  <div class="box-child-after-form">
-                    <label class="box-child-after-label">WHERE?</label>
-                    <div class="box-child-after-contain">
-                      <select class="form-select" style="padding-left: 28px">
-                        <option>All location</option>
+                <div class="col-xl-4 headding-flex">
+                  <div class="col-xl-8 ">
+                    <div class="box-child-after-form">
+                      <select class="form-select">
+                        <option>Categories</option>
                         <option>Hà Nội</option>
                         <option>Đà Nẵng</option>
                         <option>Sài gòn</option>
                       </select>
-                      <i class="fas fa-map-marker-alt box-child-after-icon"></i>
+                    </div>
+                  </div>
+
+                  <div class="col-xl-4 " >
+                    <div class="box-child-after-form">
+                      <button class="btn btn-color" type="button">Search</button>
                     </div>
                   </div>
                 </div>
 
-                <div class="col-xl-2 col-md-6 col-sm-12 padding">
-                  <div class="box-child-after-form">
-                    <select class="form-select">
-                      <option>Categories</option>
-                      <option>Hà Nội</option>
-                      <option>Đà Nẵng</option>
-                      <option>Sài gòn</option>
-                    </select>
-                  </div>
-                </div>
-
-                <div class="col-xl-1 col-md-6 col-sm-12 padding">
-                  <div class="box-child-after-form">
-                    <button class="btn btn-color" type="button">Search</button>
-                  </div>
-                </div>
+              </div>
               </div>
             </div>
           </form>
