--- a/HR4CEnouvo/index.html
+++ b/HR4CEnouvo/index.html
@@ -78,7 +78,7 @@
         <div class="box-child-after">
           <form class="box-child-after-form" action="#" method="">
             <div class="container">
-              <div class="row">
+              <div class="row row-slide">
                 <div class="col-xl-8 headding-flex ">
                   <div class="col-xl-6 ">
                     <div class="box-child-after-form">
@@ -124,7 +124,7 @@
 
                   <div class="col-xl-4 " >
                     <div class="box-child-after-form">
-                      <button class="btn btn-color" type="button">Search</button>
+                      <button class="btn btn-color" type="button"> Search</button>
                     </div>
                   </div>
                 </div>
